--- a/spices/cix-util-linux.org
+++ b/spices/cix-util-linux.org
@@ -1,9 +1,9 @@
-# File           : cix-util-linux.org
-# Created        : <2016-10-14 Wed 23:08:36 GMT>
-# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
-# Author         : sharlatan
-# Maintainer(s)  :
-# Short          :
+# File          : cix-util-linux.org
+# Created       : <2016-10-14 Wed 23:08:36 GMT>
+# Modified      : <2017-5-17 Wed 22:37:15 BST> sharlatan
+# Author        : sharlatan
+# Maintainer(s) :
+# Short         :
 
 #+OPTIONS: num:nil
 
@@ -357,7 +357,8 @@ sort(1)
 *** findmnt::files
 *** findmnt::see-also
 ** flock                                                                        :cmd:
-[[Index][⬆]]
+[[Index][⬆]] /manage locks from shell scripts/
+/Written by H. Peter Anvin/
 *** flock::options
 *** flock::examples
 *** flock::files
@@ -664,6 +665,26 @@ A *mount* command existed in Version 5 AT&T UNIX
 [[Index][⬆]]
 *** rev::options
 *** rev::examples
+**** rev-170517222532
+display sertain part of the path:
+#+BEGIN_SRC sh
+  #!/usr/bin/env bash
+
+  # Default action
+  GET_PATH="$(pwd)"
+
+  DEPTH="$2"
+
+  echo "$GET_PATH" \
+      | rev \
+      | cut -d"/" -f1-"$DEPTH" \
+      | rev
+
+#+END_SRC
+
+#+RESULTS:
+: /home/sharlatan/Projects/my-GitHub/cix/spices
+
 *** rev::files
 *** rev::see-also
     [[file:./cix-gnu-core-utilities.org::*tac][tac (1)]]
