--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 # File           : README.org
 # Created        : <2016-11-16 Wed 00:51:06 GMT>
-# Last Modified  : <2017-7-17 Mon 00:52:10 BST> sharlatan
+# Last Modified  : <2017-7-19 Wed 08:17:09 BST> sharlatan
 # Author         : sharlatan
 # Short          : README-en
 
@@ -44,12 +44,14 @@ cix
 
 #+RESULTS:
 #+BEGIN_SRC org
+Distribution per subjest:
+
 QTY  CMD       PKG
 ---  ---       ---
 33   tcpdump   tcpdump
+12   sed       sed
 10   find      gnu-findutils
 8    dd        gnu-core-utilities
-7    sed       sed
 6    awk       gawk
 5    ls        gnu-core-utilities
 3    xargs     gnu-findutils
@@ -81,4 +83,9 @@ QTY  CMD       PKG
 1    base64    gnu-core-utilities
 1    aptitude  aptitude
 1    aprping   iputils
+
+Distribution per example:
+
+Onliners:  112
+Scripts:   33
 #+END_SRC
